deployment/stacks/application/base/template/service-authentication/service-authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uec-saa
  name: service-authentication
spec:
  replicas: SERVICE_AUTHENTICATION_REPLICAS_TO_REPLACE
  selector:
    matchLabels:
      app: service-authentication
      env: PROFILE_TO_REPLACE
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # how many pods we can add at a time
      maxUnavailable: 0 # maxUnavailable define how many pods can be unavailable during the rolling update
  template:
    metadata:
      labels:
        app: service-authentication
    spec:
      serviceAccountName: uec-dos-api-saa-service-account
      serviceAccount: uec-dos-api-saa-service-account
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - service-authentication
                topologyKey: kubernetes.io/hostname
      containers:
        - name: service-authentication
          image: AWS_ECR_TO_REPLACE/uec-dos-api/saa/api:API_IMAGE_TAG_TO_REPLACE
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 10
          ports:
            - containerPort: 443
              protocol: TCP
          resources:
            requests:
              memory: "0Mi"
              cpu: "0m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          imagePullPolicy: Always
