deployment/stacks/application/base/template/service-authentication/service-authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uec-dos-api-auth-service
  namespace: uec-dos-api-sfa
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
    service.beta.kubernetes.io/aws-load-balancer-connection-draining-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-connection-draining-timeout: "60"
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Service=service-finder"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: AWS_CERTIFICATE_TO_REPLACE
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
  labels:
    app: service-authentication
spec:
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: service-authentication
