deployment/stacks/application/base/template/service-authentication/service-authentication-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  uec-dos-api-auth
  namespace: uec-saa
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-port: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: AWS_ALB_SSL_TLS_POLICY_TO_REPLACE
    alb.ingress.kubernetes.io/waf-acl-id: AWS_WAF_TO_REPLACE
    alb.ingress.kubernetes.io/certificate-arn: AWS_CERTIFICATE_TO_REPLACE
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Service=service-finder
  labels:
    app: service-authentication

spec:
  defaultBackend:
    service:
      name: uec-dos-api-auth-service
      port:
        number: 443
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uec-dos-api-auth-service
                port:
                  number: 443
